@@ -1,3 +1,8 @@
+2017-08-01  Martin Liska  <mliska@suse.cz>
+
+	Revert r250771
+	Make mempcpy more optimal (PR middle-end/70140).
+
 2017-08-01  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/81622
